# stradaemtask

./: CMakeLists.txt  README.md  main.cpp  main2.cpp
